--- a/BlazorGithubSample/_ViewImports.cshtml
+++ b/BlazorGithubSample/_ViewImports.cshtml
@@ -4,4 +4,4 @@
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
 @using BlazorGithubSample
-@using BlazorGithubSample.Shared
+@using BlazorGithubSample.Models
