--- a/BlazorGithubSample/Components/SearchResultList.cshtml
+++ b/BlazorGithubSample/Components/SearchResultList.cshtml
@@ -22,7 +22,7 @@
         </thead>
         <tbody>
             @foreach(var item in searchResult.items) {
-                <tr>
+                <tr onclick="@(e => rowClicked(item.id))">
                     <th scope="row">@item.id</th>
                     <td>@item.name</td>
                     <td>@item.url</td>
@@ -39,4 +39,7 @@
 
     [Parameter]
     private bool isFetching { get; set; }
+
+    [Parameter]
+    private Action<int> rowClicked { get; set; }
 }
